--- a/public/views/index.html
+++ b/public/views/index.html
@@ -14,9 +14,9 @@
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.0/angular-messages.js"></script>
 
     <script src="js/controllers/MainCtrl.js"></script>
-    <script src="js/controllers/NerdCtrl.js"></script>
+    <script src="js/controllers/detailCtrl.js"></script>
     <script src="js/controllers/addEditController.js"></script>
-    <script src="js/services/NerdService.js"></script>
+    <script src="js/services/mainService.js"></script>
     <script src="js/directives/dhTable.js"></script>
     <script src="js/directives/dropDown.js"></script>
     <script src="js/appRoutes.js"></script>
